mark delete or move to trash files
